...

                // Botón de Login
                Button(
                    onClick = { onLoginClick() },
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(50.dp).testTag("login_button"),
                    enabled = uiState.isFormValid && !uiState.isLoading,
                    shape = RoundedCornerShape(25.dp),
                    colors = ButtonDefaults.buttonColors(
                        containerColor = MaterialTheme.colorScheme.primary,
                        disabledContainerColor = Color(0xFFBDBDBD)
                    )
...
